feat: model deployment completed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -555,6 +555,8 @@ In recent years, the ethical implications of artificial intelligence and machine
 
     \item \emph{Model training and evaluation:} Define the training step, performs the training tuning certain parameters and provides an evaluation of the performances of the models based on accuracy and fairness metrics.
 
+    \item \emph{Model deployment:} Define the change of the environment of the model from a development environment to real world application environment.
+
 \end{enumerate}
 
 In the subsequent sections, each of these steps will be comprehensively explored to provide a detailed understanding of the fair-by-design workflow and its ethical underpinnings.
@@ -1499,6 +1501,50 @@ The discussion extends to ethical considerations arising from the model's behavi
 \subsubsection{Further Refinement}
 
 Based on the observed results, proposals for further refinement are put forth. This may involve adjusting fairness constraints, fine-tuning hyperparameters, or exploring alternative algorithms to enhance both accuracy and fairness in model predictions. The iterative nature of this refinement process reflects the commitment to continuous improvement and the pursuit of fair
+
+\section{Model Deployment}
+
+\subsection{Introduction}
+
+Model deployment is a critical phase in the fair-by-design framework, where the fair machine learning model transitions from development to practical application in real-world decision-making processes. This phase emphasizes the integration of the model into decision systems, ongoing monitoring to ensure fairness, user education, and iterative refinement based on feedback.
+
+\subsection{Integration with Decision Systems}
+
+The seamless integration of the fair machine learning model into decision systems is guided by the principles of fairness and ethical AI practices. Attention is given to the alignment of the model with existing infrastructure, ensuring that its predictions contribute meaningfully to decision-making processes. This integration involves a careful consideration of potential biases and fairness implications at every stage of the decision-making pipeline.
+
+\subsection{Monitoring and Feedback Loops}
+
+A robust monitoring system is established to continuously evaluate the model's performance in real-world scenarios. This monitoring process extends beyond traditional accuracy metrics, placing a specific focus on fairness indicators. Feedback loops are implemented to capture any deviations from fairness objectives, changes in the data distribution, or emerging ethical considerations.
+
+User feedback becomes a crucial component of the monitoring process. Users interacting with the model contribute valuable insights into its real-world impact. The feedback loops serve as a mechanism for users to report any perceived biases, disparities, or unintended consequences in the model's predictions. This user-centric approach ensures that the model's deployment remains responsive to the needs and concerns of the diverse stakeholders involved.
+
+\subsection{User Education and Awareness}
+
+Stakeholders engaging with the fair machine learning model are educated about the underlying fairness considerations. Awareness programs are designed to foster an understanding of the ethical use of the model, potential biases that may arise, and the significance of interpreting predictions within the context of fairness objectives. The goal is to empower users to make informed decisions while considering the model's capabilities and limitations.
+
+User education extends to explaining the model's predictions, the factors influencing its decisions, and the steps taken to ensure fairness. Transparent communication is key to building trust among users, encouraging responsible and ethical use of the model in diverse decision-making scenarios.
+
+\subsection{Iterative Refinement}
+
+Model deployment marks a milestone, but it is not the endpoint in the fair-by-design workflow. An iterative refinement process is integral to addressing emerging fairness challenges. User feedback, monitoring results, and ethical considerations inform ongoing refinements to the model. The iterative nature of this approach ensures that the fair machine learning model remains adaptive and responsive to evolving fairness concerns.
+
+Refinements may include adjustments to the model's algorithms, re-evaluations of fairness metrics, and enhancements to the user interface for better interpretability. The iterative refinement process embodies a commitment to continuous improvement, reinforcing the ethical foundation of the fair-by-design framework.
+
+\subsection{Discussion}
+
+\subsubsection{Reflection on Model Deployment}
+
+Reflecting on the model deployment phase involves a thorough examination of the fairness implications observed in real-world applications. Considerations include the effectiveness of fairness measures, the impact on decision-making outcomes, and any unforeseen challenges that arose during deployment. This reflection provides valuable insights into the model's practical performance and its alignment with fairness objectives.
+
+\subsubsection{User Feedback and Fairness}
+
+User feedback plays a pivotal role in assessing the fairness of the deployed model. Explore specific instances where user feedback contributed to the identification and mitigation of biases. Discuss the mechanisms in place for users to provide feedback, the responsiveness of the system to reported concerns, and the overall impact on fairness in decision-making.
+
+\subsubsection{Future Directions}
+
+In proposing future directions, emphasize the importance of refining model deployment strategies based on fairness implications and user feedback. Consider how emerging technologies, evolving ethical standards, and advancements in AI research can be leveraged to enhance the fairness and ethical considerations of the deployed model. Outline potential research avenues that focus on user-centric fairness in real-world applications.
+
+
 %----------------------------------------------------------------------------------------
 \chapter{Technical details}
 \label{chap:technical}
