--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1546,7 +1546,7 @@ In proposing future directions, emphasize the importance of refining model deplo
 
 
 %----------------------------------------------------------------------------------------
-\chapter{Technical details}
+\chapter{Implementation of Fair-by-Design Workfow in Canary Island Educational Performance Prediction}
 \label{chap:technical}
 
 
