--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1745,6 +1745,8 @@ The "equalized_odds_ratio" function measures the equality of odds for different 
 
 The "demographic_parity_ratio" function evaluates demographic parity, assessing whether the model's predictions are independent of protected attributes. It calculates the ratio of positive predictions for different demographic groups, emphasizing the need for equal representation in positive predictions. A demographic parity ratio close to 1 signals fairness in the distribution of positive predictions.
 
+\section{Model deployment}
+After the evaluation step in which is assessed whether the model perform its predcition task with a reasonable trade-off between the accuracy and the fairness the model can be deployed and be used to prediction.
 %----------------------------------------------------------------------------------------
 \chapter{Validation} % possible chapter for Projects
 \label{chap:validation}
