--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1735,7 +1735,7 @@ Following the training phase, the model's performance is assessed through rigoro
 
 \subsection{Fairness Assessment}
 
-Beyond accuracy, the fair-by-design workflow places a significant emphasis on fairness considerations. To assess the fairness of the model, two functions from the fairlearn library are employed: "equalized_odds_ratio" and "demographic_parity_ratio."
+Beyond accuracy, the fair-by-design workflow places a significant emphasis on fairness considerations. To assess the fairness of the model, two functions from the fairlearn library are employed: \emph{equalized\textunderscore odds\textunderscore ratio} and \emph{demographic\textunderscore parity\textunderscore ratio}
 
 \subsubsection{Equalized Odds Ratio}
 
