--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1778,7 +1778,7 @@ This function measures the equality of odds for different demographic groups. It
 
 \subsubsection{Demographic Parity Ratio}
 
-This demographic_parity_ratio function evaluates demographic parity, assessing whether the model's predictions are independent of protected attributes. It calculates the ratio of positive predictions for different demographic groups, emphasizing the need for equal representation in positive predictions. A demographic parity ratio close to 1 signals fairness in the distribution of positive predictions.
+This function evaluates demographic parity, assessing whether the model's predictions are independent of protected attributes. It calculates the ratio of positive predictions for different demographic groups, emphasizing the need for equal representation in positive predictions. A demographic parity ratio close to 1 signals fairness in the distribution of positive predictions.
 
 \section{Model deployment}
 After the evaluation step in which is assessed whether the model perform its predcition task with a reasonable trade-off between the accuracy and the fairness the model can be deployed and be used to prediction.
